Applied Hexagonal Architecture(Port and Adapters) for Domain Driven Design, Added Controller, Documnets, requests and incoming and outgoing ports

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.data.mongodb.database=ReadingIsGood
+spring.data.mongodb.uri=mongodb+srv://readingisgood:readingisgood@cluster0.31shd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
+spring.data.rest.base-path=/api
+server.error.include-message=always
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
