--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.data.mongodb.uri=mongodb+srv://readingisgood:readingisgood@cluster0.31shd
 spring.data.rest.base-path=/api
 server.error.include-message=always
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.main.allow-bean-definition-overriding=true
+
+book-online-retail.app.jwt-secret=readingIsGood
+book-online-retail.app.jwt-expiration-milliseconds=86400000
